--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <button id="GatherChutes" title="Gather some chutes. These plants are everywhere but it takes a moment." type="button">Gather Chutes</button>
     <button id="GatherInscium" title="Squish some insects. They contain inscium, which is useful for something or other." type="button">Gather Inscium</button>
     <button id="ConstructCrawler" hidden="true" title="Construct a crawler. I'll need 1 inscium and 1 chute. These things will gather inscium and chutes for me." type="button">Construct Crawler</button>
-    <button id="ConstructCrawler" hidden="true" title="Construct an assembler. I'll need " type="button">Construct Crawler</button>
+    <button id="ConstructAssembler" hidden="true" title="Construct an assembler. I'll need 1 crawler, 2 chutes, and 2 Inscium. These will turn my raw materials into crawlers, assuming I have enough." type="button">Construct Assembler</button>
     <p id="ChuteCount"></p>
     <p id="InsciumCount"></p>
     <p id="CrawlerCount"></p>
