I added the first layer of prestige and improved my code a lot!

--- a/index.html
+++ b/index.html
@@ -6,19 +6,30 @@
   </head>
   <body>
   <!-- These are the prestige level one upgrades. There ought to be a page break before the next one. -->
-    <button id="GatherChutes" title="Gather some chutes. These plants are everywhere, but they seem quite sturdy." type="button">Gather Chutes</button>
-    <button id="GatherInscium" title="Squish some insects. They contain inscium, which is useful for something or other." type="button">Gather Inscium</button>
-    <button id="ConstructCrawler" hidden="true" title="Construct a crawler. I'll need 1 inscium and 1 chute. These things will gather inscium and chutes for me." type="button">Construct Crawler</button>
-    <button id="ConstructAssembler" hidden="true" title="Assemble an assembler. I'll need 1 crawler, 12 chutes, and 12 inscium. These will turn my raw materials into crawlers, assuming I have enough." type="button">Construct Assembler</button>
-    <button id="ConstructDepot" hidden="true" title="Construct a depot. I'll need 2 crawlers, 35 chutes, and 7 inscium. Depots ought to act as hubs for crawlers, allowing them to be far more efficient." type="button">Construct Depot</button>
-    <button id="ConstructGarishStatue" hidden="true" title="Construct a garish statue. I'll need 2 depots, 2 assemblers, 8 crawlers, 50 chutes, and 120 inscium. I don't know why I know how to make these, they don't seem to serve any purpose. Not for me, at least." type="button">Construct Garish Statue</button>
-    <p id="ChuteCount"></p>
-    <p id="InsciumCount"></p>
-    <p id="CrawlerCount"></p>
-    <p id="AssemblerCount"></p>
-    <p id="DepotCount"></p>
-    <p id="GarishStatueCount"></p>
+    <button id="Chutes_Button" title="Gather some chutes. These plants are everywhere, but they seem quite sturdy." type="button">Gather Chutes</button>
+    <button id="Inscium_Button" title="Squish some insects. They contain inscium, which is useful for something or other." type="button">Gather Inscium</button>
+    <button id="Crawlers_Button" hidden="true" title="Construct a crawler. I'll need 1 inscium and 1 chute. These things will gather inscium and chutes for me." type="button">Construct Crawler</button>
+    <button id="Assemblers_Button" hidden="true" title="Assemble an assembler. I'll need 1 crawler, 12 chutes, and 12 inscium. These will turn my raw materials into crawlers, assuming I have enough." type="button">Construct Assembler</button>
+    <button id="Depots_Button" hidden="true" title="Construct a depot. I'll need 2 crawlers, 35 chutes, and 7 inscium. Depots ought to act as hubs for crawlers, allowing them to be far more efficient." type="button">Construct Depot</button>
+    <button id="Garish_Statues_Button" hidden="true" title="Sculpt a garish statue. I'll need 2 depots, 2 assemblers, 8 crawlers, 50 chutes, and 120 inscium. I don't know why I know how to make these, they don't seem to serve any purpose. Not for me, at least." type="button">Construct Garish Statue</button>
+    <p id="Chutes"></p>
+    <p id="Inscium"></p>
+    <p id="Crawlers"></p>
+    <p id="Assemblers"></p>
+    <p id="Depots"></p>
+    <p id="Garish_Statues"></p>
     <br>
+    <button id="Exploration_Button" hidden="true" title="It's time for me to move on, for one reason or another. This place has become so cluttered that I can hardly stand it." type="button">Abandon Possesions</button>
+    <p id="Exploration"></p>
+    <br>
+    <button id="Nature_Button" hidden="true" title="This require #1 exploration. On my journies, I have found lands with bountiful flora and fauna. As there is plenty of room, things I build will not increase in cost nearly as quickly." type="button">Nature</button>
+    <button id="Harmony_Button" hidden="true" title="This require #1 exploration. On my journies, I have found  Each depot will make other depots more efficient, here." type="button">Harmony</button>
+    <button id="Haste_Button" hidden="true" title="This require #1 exploration. On my journies, I have found a place with an air of vigor, wherein I feel time itself moving faster. All things but myself will produce faster, here." type="button">Haste</button>
+    <button id="Golems_Button" hidden="true" title="This require #1 exploration. On my journies, I have found another like myself. He will gather materials and help administrate crawlers." type="button">Golems</button>
+    <p id="Nature"></p>
+    <p id="Harmony"></p>
+    <p id="Haste"></p>
+    <p id="Golems"></p>
     <script src="./data.js"></script>
   </body>
 </html>
