--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Klaya</title>
   </head>
   <body>
-  <!-- These are the prestige level one upgrades. There ought to be a page break before the next one. -->
     <button id="Chutes_Button" title="Gather some chutes. These plants are everywhere, but they seem quite sturdy." type="button">Gather Chutes</button>
     <button id="Inscium_Button" title="Squish some insects. They contain inscium, which is useful for something or other." type="button">Gather Inscium</button>
     <button id="Crawlers_Button" hidden="true" title="Construct a crawler. I'll need 1 inscium and 1 chute. These things will gather inscium and chutes for me." type="button">Construct Crawler</button>
@@ -19,7 +18,7 @@
     <p id="Depots"></p>
     <p id="Garish_Statues"></p>
     <br>
-    <button id="Exploration_Button" hidden="true" title="It's time for me to move on, for one reason or another. This place has become so cluttered that I can hardly stand it." type="button">Abandon Possesions</button>
+    <button id="Exploration_Button" hidden="true" title="It's time for me to move on, for one reason or another. This place has become so cluttered that I can hardly stand it." type="button">Abandon Possessions</button>
     <p id="Exploration"></p>
     <br>
     <button id="Nature_Button" hidden="true" title="This require #1 exploration. On my journies, I have found lands with bountiful flora and fauna. As there is plenty of room, things I build will not increase in cost nearly as quickly." type="button">Nature</button>
@@ -30,6 +29,27 @@
     <p id="Harmony"></p>
     <p id="Haste"></p>
     <p id="Golems"></p>
+    <br>
+    <button id="Strange_Boxes_Button" hidden="true" title="On my travels, I have found an endless sea of a material which resembles my flesh. Upon dipping my foot in, I sink slightly. I shall meet my fears and become one with the desert." type="button">Cast Myself Into The Desert</button>
+    <br>
+    <button id="Disassemble_Button" hidden="true" title="I have awoken in a new land. I remember nothing of what happened after entering the desert. I may as well disassemble this box." type="button">Disassemble</button>
+    <button id="Cleerock_Button" hidden="true" title="Integrate 5 shavings together to make some Cleerock." type="button">Mesh Cleerock</button>
+    <br>
+    <button id="Fields_Button" hidden="true" title="Plant a field of cleerock. This will require 1 sigil and 1 cleerock. This field will yield shavings after a time." type="button">Plant Cleerock</button>
+    <button id="Conjurors_Button" hidden="true" title="Assemble a conjuror. I'll need 1 sigil and 3 cleerock. These will produce additional chutes and inscium based on how many I already have." type="button">Assemble Conjuror</button>
+    <button id="Manufacturers_Button" hidden="true" title="Assemble a manufacturer. I'll need 2 sigils and 5 cleerock. These will build depots and assemblers for me." type="button">Assemble Manufacturer</button>
+    <button id="Analyzers_Button" hidden="true" title="Assemble an analyzer. I'll need 2 cleerock, 1 sigils, and 20 shavings. These will think for me, producing knowledge." type="button">Assemble Analyzer</button>
+    <button id="Shavings_Button" hidden="true" title="" type="button"></button>
+    <button id="Insights_Button" hidden="true" title="" type="button"></button>
+    <p id="Strange_Boxes"></p>
+    <p id="Shavings" hidden="true"></p>
+    <p id="Cleerock"></p>
+    <p id="Sigils"></p>
+    <p id="Insights" hidden="true"></p>
+    <p id="Fields"></p>
+    <p id="Conjurors"></p>
+    <p id="Manufacturers"></p>
+    <p id="Analyzers"></p>
     <script src="./data.js"></script>
   </body>
 </html>
