With a little help I fixed the bug! Tech tree coming next~

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <button id="Analyzers_Button" hidden="true" title="Assemble an analyzer. I'll need 2 cleerock, 1 sigils, and 20 shavings. These will think for me, producing knowledge." type="button">Assemble Analyzer</button>
     <button id="Shavings_Button" hidden="true" title="" type="button"></button>
     <button id="Insights_Button" hidden="true" title="" type="button"></button>
+    <button id="Sigils_Button" hidden="true" title="" type="button"></button>
     <p id="Strange_Boxes"></p>
     <p id="Shavings" hidden="true"></p>
     <p id="Cleerock"></p>
