--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <button id="Fields_Button" hidden="true" type="button">Sow Field</button>
     <button id="Explorers_Button" hidden="true" type="button">Assemble Explorer</button>
     <button id="Conjurors_Button" hidden="true" type="button">Assemble Conjuror</button>
-    <button id="Manufacturers_Button" hidden="true" type="button">Assemble Manufacturer</button>
+    <button id="Scribes_Button" hidden="true" type="button">Assemble Manufacturer</button>
     <button id="Analyzers_Button" hidden="true" type="button">Assemble Analyzer</button>
     <button id="Shavings_Button" hidden="true" type="button"></button>
     <button id="Insights_Button" hidden="true" type="button"></button>
@@ -50,7 +50,7 @@
     <p id="Cleerock"></p>
     <p id="Conjurors"></p>
     <p id="Explorers"></p>
-    <p id="Manufacturers"></p>
+    <p id="Scribes"></p>
     <p id="Analyzers"></p>
     <script src="./data.js"></script>
   </body>
